feat(s3): object storage added
